--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --mode production && node api/index.js",
-    "dev": "webpack serve --mode depelopment --hot"
+    "dev": "webpack serve --mode development --hot"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "npm": "dame"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "react-bootstrap": "^2.5.0"
   },
   "devDependencies": {
